<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.onboarding.OnBoardingScreen2">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="350sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/onboard2"
        app:lottie_autoPlay="true"
        android:id="@+id/onboard2_anim"
        android:layout_margin="30sp"/>

    <TextView
        android:id="@+id/onboard2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboard2_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboard2_anim"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/onboard2_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboard2_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboard2_title"
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20sp"
        android:text="@string/onboard_button"
        android:background="@drawable/btn_selector"
        android:textColor="@color/splash_orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>